# cellarc

./: .bumpversion.cfg  .gitignore  DATASET_CREATION.md  PLOTS.md  README.md  build_backend.py  pyproject.toml  pytest.ini  requirements.txt  test_generate.py
.github/workflows/: python-package.yml
analysis/stats/: data_files.json  dataset_stats.json
cax_examples/: 00_getting_started.md  10_elementary.md  11_life.md  20_lenia.md  21_flow_lenia.md  22_particle_lenia.md  30_particle_life.md  31_boids.md  40_growing_nca.md  41_growing_conditional_nca.md  42_growing_unsupervised_nca.md  43_diffusing_nca.md  44_self_classifying_mnist.md  45_self_autoencoding_mnist.md  46_1d_arc_nca.md  47_attention_nca.md  50_vae.md  51_rrcnn.md  52_growing_nca_es.md
cellarc/: __init__.py  data.py  generation.py  solver.py
cellarc/generation/: __init__.py  cax_runner.py  constants.py  dataset.py  fingerprints.py  helpers.py  metrics.py  morphology.py  rules.py  sampling.py  serialization.py
cellarc/visualization/: __init__.py  ca_rollout_viz.py  episode_cards.py  episode_viz.py  palette.py  plot_signatures.py
eval/: __init__.py  common.py
scripts/: build_hf_dataset.py  enrich_downsampled.py  evaluate_solver.py  make_pool.py  plot_dataset_stats.py  plot_episode_cards.py  processing_pipeline.py  resplit_dataset.py  solver_analysis.py  split_pool.py
scripts/dataset/: DATASET_GENERATION.md  build_hf_dataset.py  processing_pipeline.py
scripts/plots/: PLOTS_IDEAS.md  export_dataset_stats_table.py  plot_dataset_stats.py
scripts/test/: test_generate.py
tests/: test_import.py
viz/: __init__.py  ca_rollout_viz.py  episode_viz.py  plot_signatures.py
