[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[project]
name = "cellarc"
version = "0.1.0"
description = "Generation and manipulation of cellular automata datasets"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "numpy",
    "matplotlib",
    "tqdm",
]

[project.optional-dependencies]
all = [
    "cax",
    "datasets>=2.14",
    "flax",
    "huggingface_hub>=0.18",
    "jax",
    "pyarrow",
]
dev = [
    "pytest",
    "black",
    "flake8",
]

[tool.hatch.build.targets.wheel]
packages = ["cellarc"]
