[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[project]
name = "cellarc"
version = "0.1.0"
description = "Generation and manipulation of cellular automata datasets"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "numpy",
    "matplotlib",
    "tqdm",
    "pyarrow",
    "huggingface_hub>=0.18",
    "datasets>=2.14",
]

[project.optional-dependencies]
all = [
    "cax",
    "flax",
    "jax",
]
dev = [
    "pytest",
    "black",
    "flake8",
]

[tool.hatch.build.targets.wheel]
packages = ["cellarc"]
